--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="https://th.bing.com/th/id/R.0a2e27b3726b1da84a17daca2dd4b953?rik=NcVyoKVtKZV0Ug&pid=ImgRaw&r=0" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Food-Village</title>
   </head>
   <body>
     <div id="root"></div>
